# tabbit

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yaml
src/tabbit/: asgi.py  exceptions.py  sentinel.py
src/tabbit/compute/: draw.py
src/tabbit/config/: __init__.py  logger.py  settings.py
src/tabbit/database/: enums.py  models.py  session.py
src/tabbit/database/operations/: ballot.py  ballot_speaker_points.py  ballot_team_score.py  debate.py  judge.py  motion.py  round.py  speaker.py  tag.py  team.py  tournament.py
src/tabbit/database/schemas/: ballot.py  ballot_speaker_points.py  ballot_team_score.py  debate.py  judge.py  motion.py  round.py  speaker.py  tag.py  team.py  tournament.py
src/tabbit/http/: root.py
src/tabbit/http/api/: ballot_speaker_points.py  ballot_team_score.py  ballots.py  constraint_messages.py  debates.py  enums.py  judges.py  motions.py  responses.py  root.py  rounds.py  speakers.py  tags.py  teams.py  tournaments.py  util.py
src/tabbit/http/api/schemas/: ballot.py  ballot_speaker_points.py  ballot_team_score.py  debate.py  judge.py  motion.py  round.py  tag.py  team.py  tournament.py
src/tabbit/http/views/: root.py  templating.py
src/tabbit/http/views/templates/: 404.html  tournaments.html
src/tabbit/schemas/: speaker.py  team.py  tournament.py
tests/: conftest.py
tests/compute/draw/: test_draw.py
tests/database/: test_int_foreign_key_constraints.py  test_unit_schema_model_conversion.py
tests/database/ballot/: test_int_crud.py
tests/database/ballot_speaker_points/: test_int_crud.py
tests/database/ballot_team_score/: test_int_crud.py
tests/database/debate/: test_int_crud.py
tests/database/judge/: test_int_crud.py
tests/database/motion/: test_int_crud.py
tests/database/round/: test_int_crud.py
tests/database/speaker/: test_int_crud.py
tests/database/team/: test_int_crud.py
tests/database/tournament/: test_int_crud.py
tests/http/: test_404.py  test_int_404.py  test_int_ping.py  test_ping.py  test_tournaments_view.py
tests/http/api/: test_foreign_key_constraints.py  test_int_foreign_key_constraints.py
tests/http/api/ballot/: test_crud.py  test_int_crud.py
tests/http/api/ballot_speaker_points/: test_int_crud.py
tests/http/api/ballot_team_score/: test_crud.py  test_int_crud.py
tests/http/api/debate/: test_int_crud.py
tests/http/api/judge/: test_int_crud.py
tests/http/api/motion/: test_int_crud.py
tests/http/api/round/: test_crud.py  test_int_crud.py
tests/http/api/speaker/: test_crud.py  test_int_crud.py
tests/http/api/tag/: __init__.py  test_crud.py  test_int_crud.py
tests/http/api/team/: test_crud.py  test_int_crud.py
tests/http/api/tournament/: test_crud.py  test_int_crud.py
