[project]
name = "tabbit"
version = "0.0.0"
description = "Debate tournament software."
readme = "README.md"
authors = [
    { name = "Tom Kuson", email = "mail@tjkuson.me" }
]
requires-python = "~=3.13"
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.13",
  "Typing :: Typed",
]
dependencies = [
    "fastapi[standard]~=0.115.13",
    "httpx~=0.28.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "coverage>=7.9.1",
    "mypy>=1.16.1",
    "pytest~=8.4.1",
    "pytest-asyncio~=1.0.0",
    "pytest-randomly~=3.16.0",
]

[tool.coverage.run]
branch = true

[tool.coverage.report]
fail_under = 100
skip_covered = true
skip_empty = true
show_missing = true

[tool.mypy]
strict_bytes = true
strict = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_return_any = true
warn_unreachable = true

[tool.pytest.ini_options]
addopts = [
    "--strict-markers",
    "--strict-config",
]
filterwarnings = [
    "error",
]
pythonpath = [
    "src",
]
xfail_strict = true

[tool.ruff.lint]
select = [
    "FAST",
    "YTT",
    "ANN",
    "ASYNC",
    "BLE",
    "FBT",
    "B",
    "A",
    "C4",
    "DTZ",
    "T10",
    "EXE",
    "ISC",
    "ICN",
    "LOG",
    "G",
    "INP",
    "PIE",
    "T20",
    "PYI",
    "PT",
    "RSE",
    "SLF",
    "SIM",
    "SLOT",
    "TID",
    "ARG",
    "FLY",
    "I",
    "N",
    "PERF",
    "E",
    "W",
    "F",
    "PGH",
    "PL",
    "UP",
    "FURB",
    "RUF",
]

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.lint.isort]
force-single-line = true
